// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions form 1`] = `
Object {
  "type": "form",
  "value": Object {
    "type": "type",
    "visible": true,
  },
}
`;

exports[`actions forward 1`] = `
Object {
  "type": "forward",
}
`;

exports[`actions messsage 1`] = `
Object {
  "type": "message",
  "value": Object {
    "content": "content",
    "type": "type",
    "visible": true,
  },
}
`;

exports[`actions next 1`] = `
Object {
  "type": "next",
}
`;

exports[`actions refresh 1`] = `
Object {
  "type": "refresh",
}
`;

exports[`actions setting 1`] = `
Object {
  "type": "setting",
  "value": Object {
    "couponRate": 1,
    "downwardResetLimit": 3,
    "periodicResetLimit": 4,
    "upwardResetLimit": 2,
  },
}
`;

exports[`actions trade 1`] = `
Object {
  "assets": Object {
    "ClassA": 234,
    "ClassB": 345,
    "ETH": 123,
  },
  "trade": "test",
  "type": "trade",
}
`;
